--- a/UIRecorder/WindowEditNodeAttribute.xaml
+++ b/UIRecorder/WindowEditNodeAttribute.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WinAppDriverUIRecorder.WindowEditNodeAttribute"
+﻿<Window x:Class="JupiterUIRecorder.WindowEditNodeAttribute"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WinAppDriverUIRecorder"
+        xmlns:local="clr-namespace:JupiterUIRecorder"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
         Title="Edit Node Attributes" Height="365" Width="800">
