--- a/UIRecorder/MainWindow.xaml
+++ b/UIRecorder/MainWindow.xaml
@@ -9,12 +9,12 @@
 //
 //*********************************************************
 -->
-<Window x:Class="WinAppDriverUIRecorder.MainWindow"
+<Window x:Class="JupiterUIRecorder.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WinAppDriverUIRecorder"
+        xmlns:local="clr-namespace:JupiterUIRecorder"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
         Closed="Window_Closed"
